--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           return s.replace(/~and~/g, '&')
         }).join('?');
         window.history.replaceState(null, null,
-          l.pathname.slice(0, -1) + decoded + l.hash
+          l.pathname.slice(0, (l.pathname + '/').substring(0, (l.pathname + '/').indexOf('/' + decoded.split('/')[0])).lastIndexOf('/') + 1) + decoded + l.hash
         );
       }
     }(window.location))
