feat: configure custom domain and optimize SEO with global meta tags, sitemap, and expanded keywords

--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Layer1.Studio</title>
+  <title>Layer1.Studio | Software, Web & App Development</title>
+  <meta name="description"
+    content="Layer1.Studio is a high-velocity engineering collective specializing in custom software, web, and app development. We build production-grade foundations for founders and scale-ups." />
+  <meta name="keywords"
+    content="software development, web development, app development, software engineering, careers, internships, React, Vite, high-velocity engineering" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://layer1studio.org/" />
+  <meta property="og:title" content="Layer1.Studio | Software, Web & App Development" />
+  <meta property="og:description"
+    content="High-velocity engineering for founders. Custom software, web, and app development that scales." />
+  <meta property="og:image" content="/assets/og_image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://layer1studio.org/" />
+  <meta property="twitter:title" content="Layer1.Studio | Software, Web & App Development" />
+  <meta property="twitter:description"
+    content="High-velocity engineering for founders. Custom software, web, and app development that scales." />
+  <meta property="twitter:image" content="/assets/og_image.png" />
+
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // https://github.com/rafgraph/spa-github-pages
