Add favicon to 404.html for SPA deep routes (manager pages)

--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Layer1.Studio</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // https://github.com/rafgraph/spa-github-pages
